# Kora

./: .gitignore  DEPLOY_RENDER.md  render.yaml
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 4a511e5bdb38_init_users.py  5b7971de8f55_add_payments.py  a7e3f4d8c2b1_add_user_onboarding_fields.py  b8e5c7f2a9d3_add_device_tokens.py  f27581e1e2fe_add_categories_transactions_pots_goals.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/api/v1/: auth.py  categories.py  (+12 more)
backend/app/core/: phone.py  security.py
backend/app/domain/: __init__.py  base.py  category.py  device_token.py  enums.py  goal.py  payment.py  savings_pot.py  transaction.py  user.py
backend/app/schemas/: auth.py  category.py  dashboard.py  device.py  goal.py  ingestion.py  insights.py  payment.py  savings_pot.py  transaction.py
backend/app/services/: category.py  coaching.py  dashboard.py  discipline.py  goal.py  ingestion.py  insights.py  notifications.py  otp.py  payment.py  payment_provider.py  push_provider.py  savings_pot.py  sms_provider.py  transaction.py
backend/scripts/: __init__.py  dev_lan.sh  seed_demo.py  smoke.sh  test_endpoints.sh  test_t2.sh  test_t3_ingest.sh  test_t4_dashboard.sh  test_t5_payment.sh
backend/tests/: conftest.py  test_coaching.py  test_discipline.py  test_health.py  test_insights.py  test_notifications.py  test_otp_demo_mode.py  test_parsers.py  test_payment.py  test_phone.py  test_push_provider.py  test_security.py
(+82 files in other folders)
